# forsit-task

./: README.md  pyproject.toml
app/: __init__.py  db_seed.py  main.py  models.py  schemas.py
app/routers/: inventory.py  products.py  sales.py
app/services/: inventory_service.py  product_service.py  sales_service.py
